--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,5 @@
+
+/*General*/
 * {
   margin: 0;
   padding: 0;
@@ -9,4 +11,77 @@ body {
   font-size: 16px;
   color: #33475b;
   font-weight: 400;
+}
+
+/*Utilities*/
+.container {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.clearfix::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+.menu-inline {
+
+}
+
+.btn {
+  float: left;
+  display: inline-block;
+  text-decoration: none;
+  color: #33475b;
+}
+
+.eng,
+.contact,
+.search {
+  padding-top: 10px;
+}
+
+.eng {
+  padding-right: 20px;
+}
+
+.contact {
+  margin-left: 20px;
+}
+
+.search,
+.log {
+  margin-right: 30px;
+}
+
+.btn-log {
+  background-color: #fafcfe;
+  border: 1px solid #fe775a;
+  border-radius: 5px;
+  color: #fe775a;
+  padding: 10px;
+}
+
+.btn-o {
+  border-radius: 5px;
+  background-color: #fe775a;
+  color: #ffffff;
+  padding: 10px;
+}
+
+.search {
+  color: #00a4bd;
+}
+
+.eng {
+  border-right: 1px solid black;
+}
+
+/*Header*/
+.header-nav-container {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #f4f9fd;
+  border-bottom: 1px solid black;
 }
