--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 
 body {
@@ -32,7 +34,6 @@ body {
 .btn {
   float: left;
   display: inline-block;
-  text-decoration: none;
   color: #33475b;
 }
 
