--- a/styles/main.css
+++ b/styles/main.css
@@ -261,7 +261,7 @@ main {
 .main-content2-container {
   height: 400px;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
 }
 
 .main-content2 {
@@ -280,19 +280,24 @@ main {
 }
 
 .logo-text {
-  height: 400px;
+  height: 210px;
   width: 30%;
-  padding-top: 90px;
   padding-right: 0px;
   padding-left: 155px;
   text-align: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .free-hub {
-  height: 400px;
+  height: 220px;
   width: 63%;
   float: right;
-  padding-top: 70px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 35%;
 }
 
 .main2-p {
@@ -302,12 +307,40 @@ main {
 
 /*Main Content 3*/
 .main-content3-container {
-  height: 700px;
-  border: 1px solid black;
+  height: 600px;
+  margin-bottom: 50px;
 }
 
- /*Ricordarmi di usare le classi, ad esempio per i loghi c'è ed è .main-logo*/
+.main-content3 {
+  height: 600px;
+}
 
+.main-content3-content {
+  height: 600px;
+  width: 30%;
+  background-color: #ffffff;
+  text-align: center;
+  padding-top: 15px;
+  padding-bottom: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.content3-margin {
+  margin-right: 59px;
+}
+
+.hr-pad {
+  padding-right: 10px;
+  padding-left: 10px;
+  margin-top: 50px;
+  margin-bottom: 30px;
+}
+
+.content3-ul {
+  text-align: left;
+  margin-bottom: 40px;
+}
 /*Fine Main Content 3*/
 
 /*Fine Main*/
