finished main-content4

--- a/styles/main.css
+++ b/styles/main.css
@@ -92,6 +92,7 @@ a:focus {
 }
 /*Fine Utilities*/
 
+/*Header*/
 /*Header Nav*/
 .header-nav-container {
   height: 101px;
@@ -227,10 +228,12 @@ a:focus {
   top: 91%;
 }
 /*Fine Jumbotron*/
+/*Fine Header*/
+
 
 /*Main*/
 main {
-  height: 2500px;
+  height: 4000px;
   border-bottom: 1px solid black;
 }
 
@@ -343,4 +346,82 @@ main {
 }
 /*Fine Main Content 3*/
 
+/*Main Content 4*/
+.main-content4-container {
+  height: 680px;
+  background-color: #00a9b9;
+}
+
+.main-content4 {
+  height: 680px;
+}
+
+.main-content4-color {
+  background-color: #00a9b9;
+}
+
+.main-content4-1 {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-align: center;
+  height: 250px;
+}
+
+.main-content4-1 h1 {
+  margin-bottom: 30px;
+}
+
+.main-content4-2 {
+  height: 360px;
+}
+
+.main-content4-2-top {
+  border-bottom: 1px solid #ffffff;
+}
+
+.f-white {
+  color: #ffffff;
+}
+
+.height-170 {
+  height: 170px;
+}
+
+.height-120 {
+  height: 120px;
+}
+
+.w-25 {
+  width: 25%;
+}
+
+.b-right {
+  border-right: 1px solid #ffffff;
+}
+
+.main-content4-2-top-content {
+  text-align: center;
+}
+
+.content-margin {
+  margin-bottom: 10px;
+}
+
+.pad-top {
+  padding-top: 30px;
+}
+
+.pad-bott {
+  padding-bottom: 30px;
+}
+
+.main-content4-2-top-content p {
+  display: block;
+  font-size: 12px;
+}
+/*Fine Main Content 4*/
+
+/*Main Content 4*/
+
+/*Fine Main Content 4*/
 /*Fine Main*/
