--- a/styles/main.css
+++ b/styles/main.css
@@ -523,7 +523,7 @@ main {
 
 /*Footer*/
 footer {
-  height: 730px;
+  height: 650px;
   background-color: #32495b;
   color: #dadee0;
 }
@@ -556,5 +556,28 @@ footer a {
 
 .footer-content-container1 {
   height: 410px;
+  margin-bottom: 50px;
+}
+
+.footer-content-container2 {
+  border-bottom: 1px solid #dadee0;
+  padding-bottom: 10px;
+  margin-bottom: 40px;
+}
+
+.footer-content-container2 ul {
+  text-align: center;
+}
+
+.footer-content-container2 li {
+  margin-right: 20px;
+}
+
+.link-final {
+  float: right;
+}
+
+.legal {
+  margin-right: 30px;
 }
 /*Fine Footer*/
